Bug 465953 - Can't navigate between apps using keyboard
Summary: Can't navigate between apps using keyboard
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_flatpak (other bugs)
Version First Reported In: 5.27.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: accessibility, usability
Depends on:
Blocks:
 
Reported: 2023-02-17 18:11 UTC by Jack Hill
Modified: 2025-05-23 18:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2023-02-17 18:11:16 UTC
SUMMARY

STEPS TO REPRODUCE
1. Open the Flatpak Applications KCM
2. Attempt to use the keyboard to open the settings for an app

3. Use the mouse to open the settings for an app
4. Press tab continuously and attempt to change focus to the area where you select apps

OBSERVED RESULT
The app-selection list is not accessible via keyboard

EXPECTED RESULT
I should be able to use the arrow keys to navigate between app settings

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20230215
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.10-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 cwo 2025-05-21 10:52:20 UTC
Git commit bc8ab29f8a7a500e7aa098edb1bc13b2ee42646a by Christoph Wolk.
Committed on 21/05/2025 at 10:20.
Pushed by cwo into branch 'master'.

ui: fix keyboard navigation on permissions page

The permissions page is currently completely unusable with keyboard
navigation; there is no way to actually get focus there. This is largely
because the sidebar and Permissions page look like sidebar/main content,
but are actually separate pages and not in each others tab chain, plus
the usual keyboard navigation challenges of qml, and the franken-mix of
nested qml in widgets of systemsettings in particular.

This change makes it at least mostly functional. We also add some
convenience by eliminating unnecessary tab stops in the list; the
checkboxes are now available directly from the delegates, and other
delegate controls are only available from that delegate, This makes it
quicker to discover and access the controls not linked to specific
delegates. Known limitations: There is an additional uneccesary tab stop
at the beginning of the Permissions page to avoid setting visible
keyboard focus for mouse users. The list does not automatically scroll
if the "Add" or "Show more" buttons are out of view. The user can use
arrow keys beyond the end of the list.
Related: bug 465952

M  +4    -1    kcm.cpp
M  +7    -0    ui/main.qml
M  +45   -0    ui/permissions.qml

https://invent.kde.org/plasma/flatpak-kcm/-/commit/bc8ab29f8a7a500e7aa098edb1bc13b2ee42646a
Comment 2 cwo 2025-05-21 11:23:27 UTC
Git commit c05e10484b0714fc010f60fa17528e5a9a2b0cea by Christoph Wolk.
Committed on 21/05/2025 at 11:21.
Pushed by cwo into branch 'Plasma/6.4'.

ui: fix keyboard navigation on permissions page

The permissions page is currently completely unusable with keyboard
navigation; there is no way to actually get focus there. This is largely
because the sidebar and Permissions page look like sidebar/main content,
but are actually separate pages and not in each others tab chain, plus
the usual keyboard navigation challenges of qml, and the franken-mix of
nested qml in widgets of systemsettings in particular.

This change makes it at least mostly functional. We also add some
convenience by eliminating unnecessary tab stops in the list; the
checkboxes are now available directly from the delegates, and other
delegate controls are only available from that delegate, This makes it
quicker to discover and access the controls not linked to specific
delegates. Known limitations: There is an additional uneccesary tab stop
at the beginning of the Permissions page to avoid setting visible
keyboard focus for mouse users. The list does not automatically scroll
if the "Add" or "Show more" buttons are out of view. The user can use
arrow keys beyond the end of the list.
Related: bug 465952


(cherry picked from commit bc8ab29f8a7a500e7aa098edb1bc13b2ee42646a)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +4    -1    kcm.cpp
M  +7    -0    ui/main.qml
M  +45   -0    ui/permissions.qml

https://invent.kde.org/plasma/flatpak-kcm/-/commit/c05e10484b0714fc010f60fa17528e5a9a2b0cea